--- a/miniature helmholtz.tex
+++ b/miniature helmholtz.tex
@@ -24,8 +24,9 @@ $$=\frac{\mu nI R^{2}}{(\left(\frac{5}{4}R^{2}\right))^{\frac{3}{2}}}
 $$=(\frac{4}{5})^{\frac{3}{2}\frac{\mu_0 NI}{R}
 $$=\frac{8}{5\sqrt{5}}\frac{\mu_0 NI}{R}
 
-Where n=number of turns
+            Where n=number of turns
             I= current(measured using multimeter)
             R=radius of the Helmholtz coil.
+\subsection{Result}
 We proved that the theoretical and practical values of magnetic field are the same.
 
