--- a/sim_doc.tex
+++ b/sim_doc.tex
@@ -35,4 +35,10 @@
 	
 	\input{equations.tex}
 	
+	\input{miniature helmholtz.tex}
+	
+	\input{ironcoreMagnetorquer.tex}
+	
+	\input{Helmholtz.tex}
+	
 \end{document}
