--- a/Helmholtz.tex
+++ b/Helmholtz.tex
@@ -2,9 +2,7 @@
 
 \vspace{15pt}
 
-In this design we used iron as the core with diameter 5.5mm and number of turns 1088 and gauge 28SWG. 
-
-We tested it theoretically using the code written by ourself and practically using the magnetometer. Both the tests did not yield the desired result. So we decided to use Stainless steel FR430 instead of iron core and change the number of turns to 350.
+description
 
 
 
@@ -30,4 +28,3 @@ We wound the wire around the plywood frame ,150 turns per coil, which was calcul
 \subsection{Inference}
 
 \subsection{Result}
-
