adjust vertical margin

--- a/sim_doc.tex
+++ b/sim_doc.tex
@@ -22,6 +22,7 @@
 	{}
 	{0pt}
 	{\thechapter.\ }
+	\titlespacing*{\chapter}{0pt}{-50pt}{30pt}
 
 	\titleformat{name=\chapter,numberless}[display]
 	{\Huge\bfseries}
@@ -33,12 +34,12 @@
 	
 	\input{cubesatsim.tex}
 	
-	\input{equations.tex}
-	
 	\input{miniature helmholtz.tex}
 	
 	\input{ironcoreMagnetorquer.tex}
 	
 	\input{Helmholtz.tex}
+	
+	\input{equations.tex}
 	
 \end{document}
