--- a/equations.tex
+++ b/equations.tex
@@ -63,3 +63,16 @@
 	X_{filtered} = S.X_{current} + \left(1-S\right)X_{previous} \hspace{7pt},
 	0 < S < 1\text{,S being the sensor reliabilty}
 \end{equation}
+
+\begin{equation}\label{magneticfield}
+	\left.
+	\begin{array}{lll}
+ \left(\frac{R}{2}\right) =  2B_1 \left(\frac{R}{2}\right)\\
+                   \vspace{5pt} = \frac{2\mu_0 nI R^{2}}{2\left(R^{2} + \left(\frac{R}{2}\right)^{2}\right)^{\frac{3}{2}}}\\ 
+                   =  \frac{\mu_0 nI R^{2}}{\left(R^{2} + \left(\frac{R}{2}\right)^{2}\right)^{\frac{3}{2}}}\\
+= \frac{\mu_0 nI R^{2}}{\left(R^{2} + \frac{1}{4}R^{2}\right)^{\frac{3}{2}}} =  \frac{\mu_0 nI R^{2}}{\left(\frac{5}{4}R^{2}\right)^{\frac{3}{2}}}\\
+= \left(\frac{4}{5}\right)^{\frac{3}{2}}\frac{\mu_0 NI}{R}\\
+= \frac{8}{5\sqrt{5}}\frac{\mu_0 NI}{R}\\
+	\end{array}
+	\right \} \hspace{10pt}\text{magnetic field at centre of Helmholtz}
+\end{equation}
