--- a/equations.tex
+++ b/equations.tex
@@ -64,7 +64,7 @@
 	0 < S < 1\text{,S being the sensor reliabilty}
 \end{equation}
 
-\begin{equation}\label{magneticfield}
+\begin{equation}\label{helmeqn}
 	\left.
 	\begin{array}{lll}
  \left(\frac{R}{2}\right) =  2B_1 \left(\frac{R}{2}\right)\\
