Add air bearing section

--- a/equations.tex
+++ b/equations.tex
@@ -21,7 +21,7 @@
 \end{equation}
 
 \begin{equation}\label{visviva}
-	v = \sqrt{\mu\left(\frac{2}{r}-\frac{1}{a}\right)}\hspace{15pt}\text{Vis-viva equation, NB: for the simulation }a\approx r
+	v = \sqrt{\mu\left(\frac{2}{r}-\frac{1}{a}\right)},\hspace{15pt}\text{Vis-viva equation, NB: for the simulation }a\approx r
 \end{equation}
 
 \begin{equation}\label{rotinertial}
@@ -75,4 +75,14 @@
 = \frac{8}{5\sqrt{5}}\frac{\mu_0 NI}{R}\\
 	\end{array}
 	\right \} \hspace{10pt}\text{magnetic field at centre of Helmholtz}
+\end{equation}
+
+\vspace{15pt}
+\begin{equation}\label{flowperm}
+		k = \left(\frac{D_p^2}{150}\right)\left(\frac{\epsilon^3}{\left(1-\epsilon\right)^2}\right), \hspace{20pt}\text{Permeability - Porosity relation}
+\end{equation}
+
+\vspace{7pt}
+\begin{equation}\label{inertlosscoeff}
+	C = \left(\frac{3.5}{D_p}\right)\frac{1-\epsilon}{\epsilon^3},\hspace{25pt}\text{Medium porosity - Inertial loss coefficient relation}
 \end{equation}
