--- a/sim_doc.tex
+++ b/sim_doc.tex
@@ -11,7 +11,7 @@
 
 \begin{document}
 	
-	\title{\textbf{\Huge Development of detumbling prototype for a 1U CubeSat}}
+	\title{\textbf{\Huge Development of a single axis detumbling prototype for a 1U CubeSat}}
 	\author{}
 	\date{}
 	\maketitle
@@ -37,6 +37,8 @@
 	\input{ironcoreMagnetorquer.tex}
 	
 	\input{Helmholtz.tex}
+	
+	\input{airBearing.tex}
 	
 	\input{equations.tex}
 	
