--- a/sim_doc.tex
+++ b/sim_doc.tex
@@ -8,6 +8,9 @@
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{tikz}
+\usetikzlibrary{positioning}
+
 
 \begin{document}
 	
@@ -41,5 +44,11 @@
 	\input{airBearing.tex}
 	
 	\input{equations.tex}
+	
+	\input{Detumbling}
+	
+	\input{Attitude Determination}
+	
+	\input{attitude control}
 	
 \end{document}
