--- a/sim_doc.tex
+++ b/sim_doc.tex
@@ -45,9 +45,9 @@
 	
 	\input{equations.tex}
 	
-	\input{Detumbling}
+	\input{detumbling}
 	
-	\input{Attitude Determination}
+	\input{attitude determination}
 	
 	\input{attitude control}
 	
