--- a/sim_doc.tex
+++ b/sim_doc.tex
@@ -43,12 +43,14 @@
 	
 	\input{airBearing.tex}
 	
-	\input{equations.tex}
-	
 	\input{detumbling}
 	
 	\input{attitude determination}
 	
 	\input{attitude control}
+	
+	\input{sensor.tex}
+	
+	\input{equations.tex}
 	
 \end{document}
